--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -84,9 +84,6 @@
     <ClCompile Include="..\..\..\..\src\config\btc256.cpp" />
     <ClCompile Include="..\..\..\..\src\config\checkpoint.cpp" />
     <ClCompile Include="..\..\..\..\src\config\directory.cpp" />
-    <ClCompile Include="..\..\..\..\src\config\ek_private.cpp" />
-    <ClCompile Include="..\..\..\..\src\config\ek_public.cpp" />
-    <ClCompile Include="..\..\..\..\src\config\ek_token.cpp" />
     <ClCompile Include="..\..\..\..\src\config\endpoint.cpp" />
     <ClCompile Include="..\..\..\..\src\config\parameter.cpp" />
     <ClCompile Include="..\..\..\..\src\config\printer.cpp" />
@@ -178,6 +175,9 @@
     <ClCompile Include="..\..\..\..\src\utility\variable_uint_size.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\dictionary.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\ec_public.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\ek_private.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\ek_public.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\ek_token.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\encrypted_keys.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\hd_private.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\hd_public.cpp" />
@@ -211,9 +211,6 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\btc256.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\checkpoint.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\directory.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\ek_private.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\ek_public.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\ek_token.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\endpoint.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\parameter.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\printer.hpp" />
@@ -316,6 +313,9 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\version.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\bitcoin_uri.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ec_public.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ek_private.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ek_public.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\ek_token.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\uri_reader.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\encrypted_keys.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\dictionary.hpp" />
