Add common handler-definition templates.

--- a/Makefile.am
+++ b/Makefile.am
@@ -299,6 +299,7 @@ include_bitcoin_bitcoin_HEADERS = \
     include/bitcoin/bitcoin/constants.hpp \
     include/bitcoin/bitcoin/define.hpp \
     include/bitcoin/bitcoin/error.hpp \
+    include/bitcoin/bitcoin/handlers.hpp \
     include/bitcoin/bitcoin/messages.hpp \
     include/bitcoin/bitcoin/version.hpp
 
