--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -150,7 +150,7 @@
     <ClCompile Include="..\..\..\..\src\network\initiator.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_address.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_ping.cpp" />
-    <ClCompile Include="..\..\..\..\src\network\protocol.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\session.cpp" />
     <ClCompile Include="..\..\..\..\src\network\seeder.cpp" />
     <ClCompile Include="..\..\..\..\src\network\timeout.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\console_streambuf.cpp" />
@@ -272,7 +272,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\initiator.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_ping.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\session.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\seeder.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\shared_const_buffer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\timeout.hpp" />
