--- a/Makefile.am
+++ b/Makefile.am
@@ -120,13 +120,13 @@ src_libbitcoin_la_SOURCES = \
     src/network/connector.cpp \
     src/network/hosts.cpp \
     src/network/message_subscriber.cpp \
+    src/network/p2p.cpp \
     src/network/protocol.cpp \
     src/network/protocol_address.cpp \
     src/network/protocol_ping.cpp \
     src/network/protocol_seed.cpp \
     src/network/protocol_version.cpp \
     src/network/proxy.cpp \
-    src/network/session.cpp \
     src/network/session_seed.cpp \
     src/network/timeout.cpp \
     src/unicode/console_streambuf.cpp \
@@ -404,6 +404,7 @@ include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/hosts.hpp \
     include/bitcoin/bitcoin/network/message_subscriber.hpp \
     include/bitcoin/bitcoin/network/network_settings.hpp \
+    include/bitcoin/bitcoin/network/p2p.hpp \
     include/bitcoin/bitcoin/network/protocol.hpp \
     include/bitcoin/bitcoin/network/protocol_address.hpp \
     include/bitcoin/bitcoin/network/protocol_base.hpp \
@@ -411,7 +412,6 @@ include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/protocol_seed.hpp \
     include/bitcoin/bitcoin/network/protocol_version.hpp \
     include/bitcoin/bitcoin/network/proxy.hpp \
-    include/bitcoin/bitcoin/network/session.hpp \
     include/bitcoin/bitcoin/network/session_seed.hpp \
     include/bitcoin/bitcoin/network/shared_const_buffer.hpp \
     include/bitcoin/bitcoin/network/timeout.hpp
