--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -150,7 +150,7 @@
     <ClCompile Include="..\..\..\..\src\network\connector.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_address.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_ping.cpp" />
-    <ClCompile Include="..\..\..\..\src\network\session.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\p2p.cpp" />
     <ClCompile Include="..\..\..\..\src\network\session_seed.cpp" />
     <ClCompile Include="..\..\..\..\src\network\timeout.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\console_streambuf.cpp" />
@@ -272,7 +272,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\connector.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_ping.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\session.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\p2p.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\session_seed.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\shared_const_buffer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\timeout.hpp" />
