Networking redesign, untested.

--- a/Makefile.am
+++ b/Makefile.am
@@ -115,20 +115,24 @@ src_libbitcoin_la_SOURCES = \
     src/message/verack.cpp \
     src/message/version.cpp \
     src/network/acceptor.cpp \
-    src/network/caller.cpp \
     src/network/channel.cpp \
+    src/network/connections.cpp \
     src/network/connector.cpp \
     src/network/hosts.cpp \
     src/network/message_subscriber.cpp \
     src/network/p2p.cpp \
+    src/network/pending.cpp \
     src/network/protocol.cpp \
     src/network/protocol_address.cpp \
     src/network/protocol_ping.cpp \
     src/network/protocol_seed.cpp \
     src/network/protocol_version.cpp \
     src/network/proxy.cpp \
+    src/network/session.cpp \
+    src/network/session_inbound.cpp \
+    src/network/session_manual.cpp \
+    src/network/session_outbound.cpp \
     src/network/session_seed.cpp \
-    src/network/timeout.cpp \
     src/unicode/console_streambuf.cpp \
     src/unicode/ifstream.cpp \
     src/unicode/ofstream.cpp \
@@ -398,13 +402,14 @@ include_bitcoin_bitcoin_networkdir = ${includedir}/bitcoin/bitcoin/network
 include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/acceptor.hpp \
     include/bitcoin/bitcoin/network/asio.hpp \
-    include/bitcoin/bitcoin/network/caller.hpp \
     include/bitcoin/bitcoin/network/channel.hpp \
+    include/bitcoin/bitcoin/network/connections.hpp \
     include/bitcoin/bitcoin/network/connector.hpp \
     include/bitcoin/bitcoin/network/hosts.hpp \
     include/bitcoin/bitcoin/network/message_subscriber.hpp \
     include/bitcoin/bitcoin/network/network_settings.hpp \
     include/bitcoin/bitcoin/network/p2p.hpp \
+    include/bitcoin/bitcoin/network/pending.hpp \
     include/bitcoin/bitcoin/network/protocol.hpp \
     include/bitcoin/bitcoin/network/protocol_address.hpp \
     include/bitcoin/bitcoin/network/protocol_base.hpp \
@@ -412,9 +417,12 @@ include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/protocol_seed.hpp \
     include/bitcoin/bitcoin/network/protocol_version.hpp \
     include/bitcoin/bitcoin/network/proxy.hpp \
+    include/bitcoin/bitcoin/network/session.hpp \
+    include/bitcoin/bitcoin/network/session_inbound.hpp \
+    include/bitcoin/bitcoin/network/session_manual.hpp \
+    include/bitcoin/bitcoin/network/session_outbound.hpp \
     include/bitcoin/bitcoin/network/session_seed.hpp \
-    include/bitcoin/bitcoin/network/shared_const_buffer.hpp \
-    include/bitcoin/bitcoin/network/timeout.hpp
+    include/bitcoin/bitcoin/network/shared_const_buffer.hpp
 
 include_bitcoin_bitcoin_unicodedir = ${includedir}/bitcoin/bitcoin/unicode
 include_bitcoin_bitcoin_unicode_HEADERS = \
