--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -140,10 +140,11 @@
     <ClCompile Include="..\..\..\..\src\message\verack.cpp" />
     <ClCompile Include="..\..\..\..\src\network\acceptor.cpp" />
     <ClCompile Include="..\..\..\..\src\network\channel.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\connections.cpp" />
     <ClCompile Include="..\..\..\..\src\network\message_subscriber.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\pending.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol.cpp" />
     <ClCompile Include="..\..\..\..\src\network\proxy.cpp" />
-    <ClCompile Include="..\..\..\..\src\network\caller.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_seed.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_version.cpp" />
     <ClCompile Include="..\..\..\..\src\network\hosts.cpp" />
@@ -151,8 +152,11 @@
     <ClCompile Include="..\..\..\..\src\network\protocol_address.cpp" />
     <ClCompile Include="..\..\..\..\src\network\protocol_ping.cpp" />
     <ClCompile Include="..\..\..\..\src\network\p2p.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\session.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\session_inbound.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\session_manual.cpp" />
+    <ClCompile Include="..\..\..\..\src\network\session_outbound.cpp" />
     <ClCompile Include="..\..\..\..\src\network\session_seed.cpp" />
-    <ClCompile Include="..\..\..\..\src\network\timeout.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\console_streambuf.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\ifstream.cpp" />
     <ClCompile Include="..\..\..\..\src\unicode\ofstream.cpp" />
@@ -260,11 +264,12 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\acceptor.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\asio.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\connections.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\message_subscriber.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\network_settings.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\pending.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\proxy.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\caller.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_base.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_seed.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_version.hpp" />
@@ -273,9 +278,12 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\protocol_ping.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\p2p.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\session.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\session_inbound.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\session_manual.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\session_outbound.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\session_seed.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\shared_const_buffer.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\timeout.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\console_streambuf.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ifstream.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ofstream.hpp" />
